added text copy changes

--- a/about.html
+++ b/about.html
@@ -65,15 +65,15 @@
                     <h2>An icon of the past, <span class="title-serif">optimized for the future.</span></h2>
                     <span class="dash-top fadein">—</span>
                     <div class="copy">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <p>Designed for Shell in the 1960's, the building at number 19 has been a dominant feature of Rotterdam for more the 50 years now.</p>
+                        <p>While staying true to it's original heritage the building has undergone a renovation that has readied it for the modern business.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="content-block--alt">
+    <!-- <section class="content-block--alt">
         <div class="container-fluid">
             <div class="background-color--alt"></div>
             <div class="row">
@@ -87,6 +87,17 @@
                         <span class="dash-top fadein">—</span>
                         <p>Some text to go inside this area here right here right blooming here.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="quote-block">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>"Hofplein 19 is what we call chic: straight up, a little rough around the edges and made of honest concrete. It's also a massive building in every aspect. We've held onto its original grandeur and gave it a modern face. Reminiscent of yesterday, yet ready for tomorrow."</p>
+                    <p>Oresti Sarafopoulos — <span class="title-serif">OZ Architects</span></p>
                 </div>
             </div>
         </div>
