--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="video-container">
-            <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
+            <!-- VIDEO -->
             <video autoplay loop id="video-background" autobuffer muted plays-inline>
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
@@ -78,9 +78,10 @@
                 <div class="col-md">
                     <div>
                         <span class="dash-top fadein">—</span>
-                        <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
+                        <h2>Feel the emotion of the city <span class="title-serif">inside the building.</span></h2>
                         <span class="dash-bottom fadein">—</span>
-                        <p>Some text to go inside this area here right here right blooming here.</p>
+                        <p>Attention to detail was at the heart of the renovation and concious choices were made with regard to material use and energy managment.</p>
+                        <p>This has led to a future-ready building with sustainable performance.</p>
                         <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
@@ -146,7 +147,7 @@
                         <span class="dash-top fadein">—</span>
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
                         <span class="dash-top fadein">—</span>
-                        <p>Some text to go inside this area here right here right blooming here.</p>
+                        <p>The building has 9 floors, each having plenty of space for any business size. You could even integrate your own lunch area.</p>
                         <a class="btn btn-secondary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
@@ -191,13 +192,13 @@
                     <div class="col-12 col-md-6">
                         <img src="img/landscape-01.jpeg" class="fadein">
                         <h3>Where corporate &amp; <span class="title-serif">creative meet</span></h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <p>Located on a dynamic crossroad of both the corporate and creative areas of Rotterdam, with everything within walking distance of the building.</p>
                         <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/landscape-02.jpeg" class="fadein">
                         <h3>Space-sharing at <span class="title-serif">Spaces HP 20</span></h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                        <p>You'll also have access to more meeting rooms and creative spaces in our neighbouring building at <a href="https://www.spacesworks.com/rotterdam/hofplein/meeting-rooms/" target="_blank" class="inline-link">Spaces</a> in Hofplein 20, with room sizes from 6 to 400 people.</p>
                         <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
                     </div>
                 </div>
