--- a/the-building.html
+++ b/the-building.html
@@ -96,7 +96,7 @@
                     <img src="img/03-icon.svg" class="fadein">
                     <div class="features-wrap">
                         <h4>9 Floors</h4>
-                        <p>9 floors from 1,400 sq M</p>
+                        <p>Each floor size from 1,400 sq m</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
@@ -130,35 +130,59 @@
                 <div class="row">
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>State of delivery</h4>
+                            <p>Highest quality of finish</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Fully customizable</h4>
+                            <p>Create any layout you need</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Transparent &amp; Bright</h4>
+                            <p>The glass facade means the building is bursting with light</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Facilities</h4>
+                            <p>Showers &amp; changing rooms on each floor</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Parking</h4>
+                            <p>A parking ratio of 1:98 + additional parking is possible</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Large floors</h4>
+                            <p>9 floors each 1,400sq m with 3.35m high ceilings</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Sustainable</h4>
+                            <p>Label A with WKO-System for heating and cooling</p>
+                        </div>
                     </div>
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
-                        <p>Fully customizable</p>
+                        <div class="features-wrap">
+                            <h4>Shared spaces</h4>
+                            <p>Enjoy more room for meetings at Spaces in Hofplein 20</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,7 +260,7 @@
 
             <div class="info-card">
                 <div>
-                    <h3>Title here</h3>
+                    <h3>The needs of the modern worker</h3>
                 </div>
                 <div>
                     <p>Attention to detail was at the heart of the renovation and conscious choices were made with regard to material use and energy management which has led to a future-ready building with sustainable performances.</p>
@@ -275,7 +299,7 @@
                             <span class="dash-top fadein">—</span>
                             <h2>Find more space at <span class="title-serif">Spaces in Hofplein 20</span></h2>
                             <span class="dash-bottom fadein">—</span>
-                            <p>You'll also have access to more meeting rooms and creative spaces in our neighbouring building at <a href="#" class="external-link">Spaces</a> in Hofplein 20 with room sizes from 6 to 400 people.</p>
+                            <p>You'll also have access to more meeting rooms and creative spaces in our neighbouring building at <a href="https://www.spacesworks.com/rotterdam/hofplein/meeting-rooms/" target="_blank" class="inline-link">Spaces</a> in Hofplein 20 with room sizes from 6 to 400 people.</p>
                         </div>
                     </div>
                 </div>
