--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="video-container">
             <!-- VIDEO -->
-            <video autoplay loop id="video-background" autobuffer muted plays-inline>
+            <video autoplay loop autobuffer muted plays-inline id="video-background">
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
