--- a/index.html
+++ b/index.html
@@ -128,11 +128,48 @@
         </div>
     </section>
 
-    <section class="create-layout">
+    <!-- <section class="create-layout">
         <h2>Create <span class="title-serif">any</span> layout</h2>
         <video controls autoplay loop class="block-level--video fadein" muted plays-inline>
             <source src="media/create-layout.mp4" type="video/mp4">
         </video>
+    </section> -->
+
+    <section class="layout-slider">
+
+        <div class="col-12 col-md-10 mx-auto">
+            <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Work to the max</h5>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Work &amp; meet</h5>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Work, meet &amp; brainstorm</h5>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+
     </section>
 
     <section class="content-block--alt">
