added location page

--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hofplein 19 | About</title>
+        <title>Hofplein 19 | Location</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -50,78 +50,33 @@
 
     <section class="statement-title alt">
         <span class="dash-top fadein" >—</span>
-        <h2>Hofplein 19 was <span class="title-serif">one of the first high-rises</span> of Rotterdam.</h2>
+        <h2>Located in the <span class="title-serif">heart of the city.</span></h2>
         <span class="dash-bottom fadein">—</span>
     </section>
 
     <main>
 
-    <div class="fadein">
-        <img src="img/history-img.jpeg" alt="hofplein 19 in the 1950's">
-    </div>
-
-    <section class="history">
-        <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="col col-lg-6">
-                    <span class="dash-top fadein">—</span>
-                    <h2>An icon of the past, <span class="title-serif">optimized for the future.</span></h2>
-                    <span class="dash-top fadein">—</span>
-                    <div class="copy">
-                        <p>Designed for Shell in the 1960's, the building at number 19 has been a dominant feature of Rotterdam for more the 50 years now.</p>
-                        <p>While staying true to it's original heritage the building has undergone a renovation that has readied it for the modern business.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- <section class="content-block--alt">
-        <div class="container-fluid">
-            <div class="background-color--alt"></div>
-            <div class="row">
-                <div class="col-md">
-                    <img src="img/optimized-future.jpeg" class="fadein">
-                </div>
-                <div class="col-md order-first">
-                    <div>
-                        <span class="dash-top fadein">—</span>
-                        <h2>Some other kinda title <span class="title-serif">to go here.</span></h2>
-                        <span class="dash-top fadein">—</span>
-                        <p>Some text to go inside this area here right here right blooming here.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <section class="quote-block">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <p>"Hofplein 19 is what we call chic: straight up, a little rough around the edges and made of honest concrete. It's also a massive building in every aspect. We've held onto its original grandeur and gave it a modern face. Reminiscent of yesterday, yet ready for tomorrow."</p>
-                    <p>Oresti Sarafopoulos — <span class="title-serif">OZ Architects</span></p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- <section class="location">
-        <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="col col-lg-6">
-                    <span class="dash-top fadein">—</span>
-                    <h2>Located in the <span class="title-serif">heart of the city.</span></h2>
-                    <span class="dash-top fadein">—</span>
-                </div>
-            </div>
-        </div>
+    <section class="location">
         <div class="fadein">
             <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
                 <source src="media/website-located-in-the-heart.mp4" type="video/mp4">
             </video>
         </div>
-    </section> -->
+    </section>
+
+    <section class="international-map">
+
+        <div class="slider-title">
+            <span class="dash-top fadein">—</span>
+            <h2>Some title <span class="title-serif">here.</span></h2>
+            <span class="dash-top fadein">—</span>
+        </div>
+
+        <div class="fadein">
+            <img src="img/international-map.jpeg">
+        </div>
+        
+    </section>
 
     <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
@@ -135,7 +90,6 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
