--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="location.html">Location</a>
+                    </li>
+                <li class="nav-item">
                     <a class="nav-link" href="the-building.html">The Building</a>
                 </li>
                 <li class="nav-item">
@@ -137,6 +140,12 @@
 
     <section class="layout-slider">
 
+        <div class="slider-title">
+            <span class="dash-top fadein">—</span>
+            <h2>Flexible <span class="title-serif">layouts.</span></h2>
+            <span class="dash-top fadein">—</span>
+        </div>
+
         <div class="col-12 col-md-10 mx-auto">
             <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
                 <div class="carousel-inner">
@@ -220,6 +229,19 @@
                         <p>Public transport on the doorstep</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="international-map">
+
+            <div class="slider-title">
+                <span class="dash-top fadein">—</span>
+                <h2>Some title <span class="title-serif">here.</span></h2>
+                <span class="dash-top fadein">—</span>
+            </div>
+
+            <div class="fadein">
+                <img src="img/international-map.jpeg">
             </div>
         </section>
 
