--- a/the-building.html
+++ b/the-building.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="location.html">Location</a>
+                    </li>
+                <li class="nav-item">
                     <a class="nav-link" href="the-building.html">The Building</a>
                 </li>
                 <li class="nav-item">
