added history page and 2 images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                         <a class="nav-link" href="location.html">Location</a>
@@ -76,7 +76,7 @@
             <div class="background-color"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/img-test.jpeg" class="fadein">
+                    <img src="img/building-front.jpeg" class="fadein">
                 </div>
                 <div class="col-md">
                     <div>
@@ -128,6 +128,7 @@
                     <p>WKO system for heating &amp; cooling</p>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -186,7 +187,7 @@
             <div class="background-color--alt"></div>
             <div class="row">
                 <div class="col-md">
-                    <img src="img/creative-environment.jpeg" class="fadein">
+                    <img src="img/building-windows.jpeg" class="fadein">
                 </div>
                 <div class="col-md order-first">
                     <div>
@@ -203,8 +204,8 @@
 
     <section class="features">
             <div class="container">
-                <div class="row">
-                    <div class="col-6 col-md-4 flex">
+                <!-- <div class="row"> -->
+                    <!-- <div class="col-6 col-md-4 flex">
                         <img src="img/star.svg" class="fadein">
                         <p>A rooftop terrace</p>
                     </div>
@@ -228,7 +229,62 @@
                         <img src="img/star.svg" class="fadein">
                         <p>Public transport on the doorstep</p>
                     </div>
+                </div> -->
+
+                <div class="row">
+
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Rental price</h4>
+                            <p>€200 per squre meter per year</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Surface</h4>
+                            <p>14,444 sq m (in units from 1,411 sq m)</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Location</h4>
+                            <p>City centre</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Energy rating</h4>
+                            <p>Rating: A</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Construction</h4>
+                            <p>1960</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Number of floors</h4>
+                            <p>9 Floors</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Services</h4>
+                            <p>Mechanical ventilation, top cooling, lifts, cable trays &amp; toilets</p>
+                        </div>
+                    </div>
+        
                 </div>
+
             </div>
         </section>
 
