--- a/the-building.html
+++ b/the-building.html
@@ -30,7 +30,7 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                         <a class="nav-link" href="location.html">Location</a>
