added features update and icon

--- a/the-building.html
+++ b/the-building.html
@@ -84,36 +84,43 @@
                 <div class="col-12 col-md-4 flex">
                     <img src="img/01-icon.svg" class="fadein">
                     <div class="features-wrap">
-                        <h4>A rooftop terrace</h4>
-                        <p>Restaurant by Ron de Jong</p>
+                        <h4>Rooftop bar</h4>
+                        <p>By Ron de Jong</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
                     <img src="img/02-icon.svg" class="fadein">
                     <div class="features-wrap">
                         <h4>Spaces</h4>
-                        <p>Shared meeting rooms &amp; lunch bar</p>
+                        <p>Shared meeting rooms at Hofplein 20</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
                     <img src="img/03-icon.svg" class="fadein">
                     <div class="features-wrap">
-                        <h4>9 Floors</h4>
-                        <p>Each floor size from 1,400 sq m</p>
+                        <h4>Workspaces</h4>
+                        <p>9 floors from 1,411 sq m</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
                     <img src="img/04-icon.svg" class="fadein">
                     <div class="features-wrap">
-                        <h4>Starbucks &amp; Shell station</h4>
-                        <p>Fill up at the petrol station or grab a coffee</p>
+                        <h4>Shell</h4>
+                        <p>Petrol station located underneath the building</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 flex">
                     <img src="img/05-icon.svg" class="fadein">
                     <div class="features-wrap">
-                        <h4>Deli 19</h4>
-                        <p>Lunch bar by Ron de Jong inside HP 19</p>
+                        <h4>Starbucks</h4>
+                        <p>Enjoy a coffee at Starbucks located underneath the building</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 flex">
+                    <img src="img/06-icon.svg" class="fadein">
+                    <div class="features-wrap">
+                        <h4>Deli19 Lunchbar</h4>
+                        <p>Brasserie by Ron de Jong</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +137,7 @@
                         </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-6 col-md-4 flex">
                         <img src="img/star-alt.svg" class="fadein">
                         <div class="features-wrap">
@@ -187,7 +194,62 @@
                             <p>Enjoy more room for meetings at Spaces in Hofplein 20</p>
                         </div>
                     </div>
+                </div> -->
+
+                <div class="row">
+
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Rental price</h4>
+                            <p>€200 per squre meter per year</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Surface</h4>
+                            <p>14,444 sq m (in units from 1,411 sq m)</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Location</h4>
+                            <p>City centre</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Energy rating</h4>
+                            <p>Rating: A</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Construction</h4>
+                            <p>1960</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Number of floors</h4>
+                            <p>9 Floors</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 flex">
+                        <img src="img/star.svg" class="fadein">
+                        <div class="features-wrap">
+                            <h4>Services</h4>
+                            <p>Mechanical ventilation, top cooling, lifts, cable trays &amp; toilets</p>
+                        </div>
+                    </div>
+        
                 </div>
+
             </div>
         </section>
 
@@ -203,10 +265,19 @@
                 <div id="carouselExampleControls" class="carousel slide fadein" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
                             <img src="img/slider-01.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
+                            <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
                             <img src="img/slider-02.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
