contact page adjustments

--- a/contact.html
+++ b/contact.html
@@ -97,22 +97,25 @@
                 <div class="col-12 col-sm-4 flex">
                     <img src="img/directions.svg" class="fadein">
                     <div>
-                        <h4>Visit Us</h4>
-                        <p><a href="#">Directions</a></p>
+                        <h4>Plan your visit</h4>
+                        <p><a href="https://www.google.com/maps/place/Hofplein+19,+3032+AC+Rotterdam/@51.9251123,4.477353,18z/" target="_blank">Directions</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-4 flex">
                     <img src="img/call.svg" class="fadein">
                     <div>
                         <h4>Call Us</h4>
-                        <p><a href="tel:+31 000 000 000">+31 000 000 000</a></p>
+                        <h5>CBRE</h5>
+                        <p class="mb-sm"><a href="tel:+31 (0)10 300 48 00">T +31 (0)10 300 48 00</a></p>
+                        <h5>De Mik Bedrijfshuisvesting</h5>
+                        <p><a href="tel:+31 (0)10 453 03 03">T +31 (0)10 453 03 03</a></p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-4 flex">
                     <img src="img/email.svg" class="fadein">
                     <div>
                         <h4>Email Us</h4>
-                        <p><a href="mailto:info@hofplein19.nl" target="_blank">info@hofplein19.nl</a></p>
+                        <p><a href="mailto:contact@hofplein19.nl" target="_blank">contact@hofplein19.nl</a></p>
                     </div>
                 </div>
             </div>
