added carousel adjustments

--- a/history.html
+++ b/history.html
@@ -68,7 +68,7 @@
                     <h2>An icon of the past, <span class="title-serif">optimized for the future.</span></h2>
                     <span class="dash-top fadein">—</span>
                     <div class="copy">
-                        <p>Designed for Shell in the 1960's, the building at number 19 has been a dominant feature of Rotterdam for more the 50 years now.</p>
+                        <p>Designed for Shell in the 1960's, the building at number 19 has been a dominant feature of Rotterdam for more than 50 years now.</p>
                         <p>While staying true to it's original heritage the building has undergone a renovation that has readied it for the modern business.</p>
                     </div>
                 </div>
