--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <span class="dash-bottom fadein">—</span>
                         <p>Attention to detail was at the heart of the renovation and concious choices were made with regard to material use and energy managment.</p>
                         <p>This has led to a future-ready building with sustainable performance.</p>
-                        <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a>
+                        <!-- <a class="btn btn-primary fadein" href="the-building.html" role="button">Learn more</a> -->
                     </div>
                 </div>
             </div>
@@ -153,19 +153,19 @@
                     <div class="carousel-item active">
                         <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Work to the max</h5>
+                            <h6>Work to the max</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Work &amp; meet</h5>
+                            <h6>Work &amp; meet</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Work, meet &amp; brainstorm</h5>
+                            <h6>Work, meet &amp; brainstorm</h6>
                         </div>
                     </div>
                 </div>
@@ -332,11 +332,11 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/carousel.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
 
