--- a/the-building.html
+++ b/the-building.html
@@ -266,18 +266,27 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="img/work-meet-brainstorm-slider.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h6>Work, meet &amp; brainstorm</h6>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/slider-01.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="img/work-to-the-max-slider.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h6>Work to the max</h6>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img src="img/slider-02.jpeg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="img/work-and-meet-slider.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h6>Work &amp; meet</h6>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -392,11 +401,11 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/carousel.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/animation.js"></script>
 
