added partner logos section to contact page

--- a/contact.html
+++ b/contact.html
@@ -122,9 +122,42 @@
         </div>
     </section>
 
-    <section>
-        <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
+    <section class="partner-logos">
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-3">
+                    <img src="img/ppf-holding.png">
+                    <p>Owner</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-5th">
+                    <img src="img/OZ_logo-fade.jpg">
+                    <p>Architect</p>
+                </div>
+                <div class="col-5th">
+                    <img src="img/nl-asset.jpg">
+                    <p>Asset Manager</p>
+                </div>
+                <div class="col-5th">
+                    <img src="img/Groenedijk.jpg">
+                    <p>Contractor</p>
+                </div>
+                <div class="col-5th">
+                    <img src="img/cbre logo.jpg">
+                    <p>Estate agent</p>
+                </div>
+                <div class="col-5th">
+                    <img src="img/MIK_LOGO_NEW.jpg">
+                    <p>Estate agent</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- <section>
+        <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
+    </section> -->
   
     </main>
 
