--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h2>Flexible workspaces for <span class="title-serif">any business size.</span></h2>
                         <span class="dash-top fadein">—</span>
                         <p>The building has 9 floors, each having plenty of space for any business size. You could even integrate your own lunch area.</p>
-                        <a class="btn btn-secondary fadein" href="the-building.html" role="button">Learn more</a>
+                        <!-- <a class="btn btn-secondary fadein" href="the-building.html" role="button">Learn more</a> -->
                     </div>
                 </div>
             </div>
