--- a/the-building.html
+++ b/the-building.html
@@ -58,7 +58,7 @@
 
         <div class="video-container">
             <!--  Video is muted & autoplays, placed after major DOM elements for performance  -->
-            <video autoplay loop id="video-background" muted plays-inline>
+            <video id="video-background" loop muted playsinline autoplay>
                 <source src="media/website-homepage-edit_720.mp4" type="video/mp4">
             </video>
         </div>
@@ -389,9 +389,9 @@
             </div>
         </section>
 
-        <section>
+        <!-- <section>
             <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-        </section>
+        </section> -->
         
     </main>
 
