partners section styling

--- a/the-building.html
+++ b/the-building.html
@@ -333,7 +333,7 @@
             <div class="fadein video-container--flex">
                 <div class="title-wrap">
                     <span class="dash-top fadein">—</span>
-                    <h2>Feel the emotion of the city <span class="title-serif">right inside the building</span></h2>
+                    <h2>Feel the emotion of the city <span class="title-serif">inside the building</span></h2>
                     <span class="dash-top fadein">—</span>
                 </div>
                 <video autoplay loop class="block-level--video fullwidth" muted plays-inline>
