--- a/contact.html
+++ b/contact.html
@@ -124,10 +124,13 @@
 
     <section class="partner-logos">
         <div class="container">
-            <div class="row">
-                <div class="col-6 col-md-3">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <h2 class="partner-title">Partners</h2>
+                </div>
+                <div class="col-8 col-md-4 text-center mb-l">
                     <img src="img/ppf-holding.png">
-                    <p>Owner</p>
+                    <p class="mt-md">Owner</p>
                 </div>
             </div>
             <div class="row">
@@ -155,9 +158,9 @@
         </div>
     </section>
 
-    <!-- <section>
+    <section>
         <iframe src="https://snazzymaps.com/embed/139043" width="100%" height="500px" style="border:none;"></iframe>
-    </section> -->
+    </section>
   
     </main>
 
