--- a/index.html
+++ b/index.html
@@ -132,13 +132,6 @@
         </div>
     </section>
 
-    <!-- <section class="create-layout">
-        <h2>Create <span class="title-serif">any</span> layout</h2>
-        <video controls autoplay loop class="block-level--video fadein" muted plays-inline>
-            <source src="media/create-layout.mp4" type="video/mp4">
-        </video>
-    </section> -->
-
     <section class="layout-slider">
 
         <div class="slider-title">
@@ -204,32 +197,6 @@
 
     <section class="features">
             <div class="container">
-                <!-- <div class="row"> -->
-                    <!-- <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>A rooftop terrace</p>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>9 floors from 1,400 sq M</p>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>Deli 19 lunchroom</p>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>Spaces at Hofplein 20</p>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>Starbucks &amp; Shell station below building</p>
-                    </div>
-                    <div class="col-6 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <p>Public transport on the doorstep</p>
-                    </div>
-                </div> -->
 
                 <div class="row">
 
@@ -251,7 +218,7 @@
                         <img src="img/star.svg" class="fadein">
                         <div class="features-wrap">
                             <h4>Location</h4>
-                            <p>City centre</p>
+                            <p>Central business district</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 flex">
@@ -275,13 +242,6 @@
                             <p>9 Floors</p>
                         </div>
                     </div>
-                    <div class="col-12 col-md-4 flex">
-                        <img src="img/star.svg" class="fadein">
-                        <div class="features-wrap">
-                            <h4>Services</h4>
-                            <p>Mechanical ventilation, top cooling, lifts, cable trays &amp; toilets</p>
-                        </div>
-                    </div>
         
                 </div>
 
@@ -290,7 +250,7 @@
 
         <section class="international-map">
 
-            <div class="slider-title">
+            <div class="map-title">
                 <span class="dash-top fadein">—</span>
                 <h2>Some title <span class="title-serif">here.</span></h2>
                 <span class="dash-top fadein">—</span>
